--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
    <div class="front pocket"></div>
    <div class="letter">
    <p class="words line1">Hi Charbel,</p>
-   <p class="words line2">Just wanted to remind you that i love u and ur feet are pretty.</p>
+   <p class="words line2">Just wanted to remind you that i love u and u are so pretty.</p>
    <p class="words line3">Love,</p>
    <p class="words line4">Manal</p>
    </div>
